examples/internal-lb-with-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-app1
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-dns-zone-fqdn: "internal-app1.my.akszone.private"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: nginx
